force-app/main/default/objects/DMD_CustomObject__c/DMD_CustomObject__c.object-meta.xml
<CustomObject>
    <label>DMD CustomObject</label>
    <nameField>
        <label>DMD_CustomObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DMD CustomObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>