force-app/main/default/objects/DMD_CustomObject__c/fields/DMD_external__c.field-meta.xml
<CustomField>
    <fullName>DMD_external__c</fullName>
    <externalId>true</externalId>
    <label>DMD_external</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>