force-app/main/default/objects/DMD_CustomObject__c/fields/DMD_MyTimeAndDate__c.field-meta.xml
<CustomField>
    <fullName>DMD_MyTimeAndDate__c</fullName>
    <label>DMD_MyTimeAndDate</label>
    <type>DateTime</type>
</CustomField>