force-app/main/default/objects/DMD_CustomObject__c/fields/Field_First__c.field-meta.xml
<CustomField>
    <fullName>Field_First__c</fullName>
    <label>Field First</label>
    <length>20</length>
    <type>Text</type>
</CustomField>