force-app/main/default/objects/DMD_CustomObject__c/validationRules/DMD_Field_First_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>DMD_Field_First_VR</fullName>
    <active>true</active>
    <description>Testing Dx Format</description>
    <errorConditionFormula>Field_First__c == &quot;Testing&quot;</errorConditionFormula>
    <errorDisplayField>Field_First__c</errorDisplayField>
    <errorMessage>Expected value is &quot;Testing&quot;</errorMessage>
</ValidationRule>